# discord-webhook-manager

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.bat  license.txt  main.cpp  readme.md
cmake/: vcpkg.cmake
